# opencourseware

./: .gitignore  README.md
OpenCourseWare/: course_context.py  extract_pdf.py  helpers.py  main.py  pipeline.py  pyproject.toml  scraper.py
OpenCourseWare/database/: analysis.sql  docker-compose.yml  models.py  session.py
